modules/ECK/yaml/kibana_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-write-timeout: "900"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
#    cert-manager.io/cluster-issuer: letsencrypt
#    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"

spec:
  # To enable SSL offloading at ingress level, uncomment the following 5 lines
  rules:
    - http:
        paths:
          - path:
            backend:
              serviceName: kibana-kb-http
              servicePort: 5601
      host: kibana.172.16.128.244.nip.io
